mejorando valores predeterminados

--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
 
     <script>
         const defaultConfig = {
-        porcentajeGanancia: 35,
-        porcentajeFlete: 10,
-        porcentajeRecargo: 15,
+        porcentajeGanancia: 30,
+        porcentajeFlete: 5,
+        porcentajeRecargo: 20,
         porcentajeDescuento: 20,    // Descuento para efectivo (20%)
         porcentajeDebito: 15,       // Nuevo campo para descuento de débito (15%)
-        proveedor: ""
+        proveedor: "pilkington"
     };
     
         const glassTypeInfo = {
